--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "vscode": "^1.90.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Seandor/vscode-intercept-quickopen.git"
+  },
   "categories": [
     "Other"
   ],
